loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:4: error: '(' expected but identifier found.
    if estSurBiscuit() { nb=nb+1}
       ^Poucet1:5: error: illegal start of simple expression
  }
  ^